--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%237d6ee7%22></rect><text x=%2250%%22 y=%2250%%22 dominant-baseline=%22central%22 text-anchor=%22middle%22 font-size=%2290%22>🎿</text></svg>" />
-		<title>GSHDK</title>
+		<title>GustavHartz</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -239,7 +235,7 @@
 								<h2>Get in touch</h2>
 								<ul class="icons">
 									<li><a href="https://www.instagram.com/gustavhartz/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github.com/GSHDK" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/gustavhartz" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://www.linkedin.com/in/gustavhartz/" class="icon brands style2 fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="mailto:gustav.s.hartz@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 									<li><a href="documents/New-CV-2021-Jan.pdf" class="icon solid style2 fa-id-card"><span class="label">Resume</span></a></li>
