Change some spelling

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<h1 class="awesome">Gustav Hartz</h1>
 								<h2>Data Engineering & Science</h2>
 								<p>Ambitious engineering student with a passion for big data, algorithms, and machine learning along with backcountry skiing ⛷. I am currently enrolled at the Technical University of Denmark studying Human Centered Artificial Intelligence. 
-									Along with my studies I work as a Junior data Scientist a GreenMobility and as a Teaching Assintant at the Technical University of Denmark.</p>
+									Along with my studies I work as a Junior Data Scientist a GreenMobility and as a Teaching Assistant at the Technical University of Denmark.</p>
 							</header>
 
 							<p><b>Projects that I have been working on</b></p>
