--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="">Home</a></li>
 							<li><a href="documents/New-CV-2021-Jan.pdf">Resume</a></li>
-							<li><a href="#">About Me (in progress)</a></li>
-							<li><a href="#">Articles (in progress)</a></li>
+							<li><a href="">About Me (in progress)</a></li>
+							<li><a href="">Articles (in progress)</a></li>
 						</ul>
 					</nav>
 
