--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 											<h2>Multi Agent Systems</h2>
 											<p><b><i>DTU 02288 Artificial Intelligence and Multiagent Systems</i></b></p>
 											<p>The project presents a multi-agent architecture for solving transportation tasks in the simplified hospital domain. 
-												The client implements individual problem-solving and communication between agents by the cooperative distributed problem solving framework, where problem decomposition and synthesis are key. 
-												When synthesising the sub-problem solutions, eventual conflicts are handled online, and the behavior of agents involved in conflicts is defined by social laws, always favoring the collective solution compared to any individual agent. 
-												By performing an extensive level preprocessing, which included locating constructs such as tunnels, wells, and con- nected components, this client was able to solve just under 50% of the submitted levels for the competition. It ranked 3/28 in the multi-agent category</p>
+												The client implements individual problem-solving and communication between agents by the cooperative distributed problem solving framework. 
+												Conflicts are handled online, and the behavior of agents is defined by social laws, favoring the collective solution. 
+												With level preprocessing, which included locating constructs such as tunnels, wells, and connected components, the client was able to solve just under 50% of the submitted competition levels and ranked 3/28 in the multi-agent category</p>
 											<p>Learn more: Checkout the <a href="https://github.com/gustavhartz/02285-ai-programming-project">Github project</a> or the related <a href="documents/AI_Deep_Plan.pdf">Paper</a></p>
 										  </div>
 										  <a class="popup__close" href="#">X</a>
