Added deeplearning poster and link to github repo

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 											<p><b><i>Using deep convolutional LSTM's to predict future demand</i></b></p>
 											<p>The project assesses Convolutional Long Short Term Memory networks for demand prediction of free floating Mobility as a Service fleets. Furthermore, it seeks to model the time and place of a successful car rental by creating a spatiotempo- ral model for near future rentals based on data provided by GreenMobility.
 												The primary approach is the Convolutional LSTM. This model is compared to multiple output LSTM and linear regression. The results show that when modeling the demand as the location of the car of successful rentals, the Convolutional LSTM does not yield significantly better results than a linear regression with time-related independent variables.</p>
-											<p>Learn more: Checkout the <a href="#">Github project</a> or the related <a href="#">Paper</a></p>
+											<p>Learn more: Checkout the <a href="https://github.com/gustavhartz/greenmobility-demand-prediction-public">Github project</a> or the related <a href="documents/Deeplearning PosterFinal.pdf">Paper</a></p>
 										</div>
 										  <a class="popup__close" href="#">X</a>
 										</div>
